[tool.poetry]
name = "gen-harmonizer"
version = "0.1.0"
description = "Generate a DataHarmonizer application from a schema"
authors = ["Patrick Kalita <pkalita@lbl.gov>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
linkml-runtime = "^1.3.0"
PyInquirer = "^1.0.3"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gen-harmonizer = 'gen_harmonizer.cli:run'
